testsuite/tests/rename/should_fail/T19843f.stderr

T19843f.hs:8:12: error: [GHC-76037]
    Not in scope: ‘mup’
    Suggested fix: Perhaps use ‘mop’ (line 5)

T19843f.hs:10:10: error: [GHC-76037]
    Not in scope: ‘mup’
    Suggested fix: Perhaps use ‘mop’ (line 5)
